--- a/index.html
+++ b/index.html
@@ -2,7 +2,25 @@
 <html>
   <head>
     <title>The Glass Refractory</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+  	<section id="book1">
+      <section id="book1_page1">
+        <img src="page1.jpg">
+      </section>
+      <section id="book1_page2">
+        <img src="page2.jpg">
+      </section>
+      <section id="book1_page3">
+        <img src="page3.jpg">
+      </section>
+      <section id="book1_page4">
+        <img src="page4.jpg">
+      </section>
+      <header>
+        <img src="cover.png">
+      </header>      
+  	</section>
   </body>
 </html>
