Added first text.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>The Glass Refractory</title>
+    <link href='http://fonts.googleapis.com/css?family=Crimson+Text:700,400,700italic,400italic' rel='stylesheet' type='text/css'>    
     <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
   </head>
   <body>
   	<section id="book1">
@@ -20,7 +22,70 @@
       </section>
       <header>
         <img src="cover.png">
-      </header>      
+      </header>
+      <section id="book1_page5">
+        <h1>January 18, 1861</h1>
+        <p>Dear Lethe,</p>
+
+        <p>I wish to continue writing to you of my work with William. It feels fitting somehow, that you should
+        be the witness to this work we are doing. I say this in the present tense, for on that morning, we entered
+        into an agreement.</p>
+
+        <p>That morning, he spoke of you, and it was something about the way he spoke: a casualness, as though
+        he were stating a clearly observable fact.</p>
+
+        <p>“The air is very cold right now; the angle of light reflecting off a surface is equal to the angle
+        by which it strikes it; your shadow is alive.”</p>
+
+        <p>He did not sound mad or desperate as the priests do during their Sunday sermons, or during the many
+        exorcisms my mother subjected our house and its inhabitants to. His certainty gave me no easy way to
+        dismiss his words, I found myself asking: if I simply think him mad or irritating, why is my chest
+        tightening with fear?</p>
+
+        <p>“How would you know a thing like that? Did you take its pulse?”</p>
+
+        <p>“It is a rather different kind of life. Here, look for yourself.”</p>
+        <p>He handed me an eyepiece. The ring around its edge was ornate gold, etched with Arabic calligraphy.
+        Its lens was not glass, but finely polished black opal, splashed with brilliant red and green flame.
+        I turned the device in my hands.</p>
+
+        <p>“The lens is opaque.”</p>
+
+        <p>“It is a seeing stone. It blocks light so that you may see better.”</p>
+
+        <p>In good humor, I turned to face west. You stretched out long before me in the morning sun. I closed
+        my right eye and held the pendant up to my left. Apart from a few glints of light scattered through
+        the flame in the stone,  I saw nothing. I looked back at William, annoyed.</p>
+
+        <p>“Is this prank how you court women? I can’t imagine it is very effective.”
+
+        <p>“You are looking at the lens,” he said patiently. “Would that work, even if it were glass? You have
+        to look through it.”</p>
+
+        <p>I held up the piece again. I allowed my gaze to pass through the stone, relaxing my eyes and
+        focusing into the distance.</p>
+
+        <p>A world began to take shape. It began with the colors of the stone, luminous yet indistinct, undulating into activity  like the patterns behind closed eyelids on a bright day. I apologize, shadow. I forget who I am writing to—do you have eyelids, or know sunny days? I think not. The patterns I am describing are the result of light filtering through a thin layer of skin and combining with the memory of what was seen before. They breathe as our eyes search for the world that has gone away. Those blurry ruminations of bored eyeballs will never come into focus—but through the stone, lines clarified, shadows deepened, an image began to resolve. I had the distinct sense that the image was forming not upon my eyes, but somewhere behind them.</p>
+
+        <p>The gargoyles emerged first. They had long guarded the bank on this corner, looking down with grotesque displeasure upon the poor and criminal. This was not the first time I saw an aliveness in their eyes. It was the first time I saw them move and breathe, their massive stone bodies animated, their heads turning to examine each passerby, their stone skin moving as if it contained heavy, powerful muscles. In the course of its perpetual search, one of them looked me directly in the eye. I nearly dropped the seeing stone with a start. Its gaze was not a light one, and for an uncomfortable moment, it examined me, its eyes peeling away my skin and revealing my intentions. Eventually, it moved on, evidently satisfied.</p>
+
+        <p>“They should not trouble you,” William said, “You have wealth and means. You are a friend to them.”</p>
+
+        <p>I made to reply, but found words difficult to come by. Looking through the stone had a peculiar dislocating effect. I remained aware that I was standing by the side of a street peering through an occult device, but the world in which that was true seemed distant and muddled, as though remembering an old dream. The sky lightened and the heavens began to emerge. At that moment, I realized that every sky I had seen before had been incomplete.</p>
+
+        <p>Remembering my purpose, I shifted my attention downward, to where you lay on the street. Immediately, I was flooded with vertigo, for I found that I had been standing at the edge of an unfathomably high cliff. All along your walls, a city has grown, terraced and hung with lanterns. I took a step back from the edge—but of course, you move to meet me underfoot. The city rearranged itself to fit your shifting boundaries, and seeing the rippling light from its lanterns, I realized the city was flooded. I bent to touch your surface and tasted the water on my fingers. Your waters are cold and salty, deep and phenomenally clear.</p>
+
+        <p>“Tama.” William’s voice came from no particular direction. Unsure of my body, I dropped the stone from my eye. Initially blind and disoriented, I slowly came to find myself kneeling on the side of the street, licking dirt from my fingers.</p>
+
+        <p>I invited him to my laboratory, where the truth came to light. He is a student of oriental religions in a sense, but he is not affiliated with New York University or any other. He is a freelance magician. He was indeed named William Henry, but he now preferred Noor, a name given to him in Palestine. It is Arabic, and means light. What I saw through the stone was the thinnest sliver of the psychic world, where spirits and demons reside, and where magicians ply their trade.</p>
+
+        <p>I asked immediately for him to teach me. He regarded me—and, I am certain, you—for only a moment before agreeing.</p>
+
+        <p>I am his first student. I must commend his pedagogical intuition, for as I have written this, you have become more and more real. This morning’s visions have become solid in my mind, and even now, I feel I see a depth to you, and faint light beneath your surface. I remember you. No, that’s not it. I forget you. There is an absence in my memory, and you are its shape.</p>
+
+        <p>With Love,<br>
+        Tama</p>
+      </section>
   	</section>
   </body>
 </html>
