--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Dear Lethe,</p>
 
         <p>I wish to continue writing to you of my work with William. It feels fitting somehow, that you should
-        be the witness to this work we are doing. I say this in the present tense, for on that morning, we entered
+        be the witness to this work we are doing. I say this in the present tense, for we have entered
         into an agreement.</p>
 
         <p>That morning, he spoke of you, and it was something about the way he spoke: a casualness, as though
