--- a/index.html
+++ b/index.html
@@ -8,21 +8,9 @@
   </head>
   <body>
   	<section id="book1">
-      <section id="book1_page1">
-        <img src="page1.jpg">
+      <section id="book1_notebook_cover">
+        <img src="notebook-cover.jpg">
       </section>
-      <section id="book1_page2">
-        <img src="page2.jpg">
-      </section>
-      <section id="book1_page3">
-        <img src="page3.jpg">
-      </section>
-      <section id="book1_page4">
-        <img src="page4.jpg">
-      </section>
-      <header>
-        <img src="cover.png">
-      </header>
       <section id="book1_page5">
         <h1>January 18, 1861</h1>
         <p>Dear Lethe,</p>
